Fixed overflow

--- a/leaguewordle-frontend/src/Home.css
+++ b/leaguewordle-frontend/src/Home.css
@@ -62,6 +62,7 @@ body {
   background-color: #f8f8f7;
 }
 .main {
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -200,9 +201,8 @@ input:disabled {
   border-width: 2px;
 }
 .cardContainer {
-  z-index: 9999;
+  z-index: 999;
   position: absolute;
-  overflow: hidden;
   inset-inline: 0;
 }
 .cards {
